# sif-plusplus

./: CMakeLists.txt  README.md  run.sh  sif.cpp
include/: CMakeLists.txt
include/sif/Driver/: driver.h
include/sif/Parser/: ast.h  lexer.h  parse_error.h  parse_result.h  parser.h  reserved.h  symbol_table.h  token.h
lib/: CMakeLists.txt
lib/Driver/: CMakeLists.txt  driver.cpp
lib/Parser/: CMakeLists.txt  ast.cpp  lexer.cpp  parse_error.cpp  parse_result.cpp  parser.cpp  symbol_table.cpp  token.cpp
test/: run.py
